--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.454.0",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.13.2",
+    "sass": "^1.80.5",
+    "shadcn-ui": "^0.9.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
