--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "@dnd-kit/core": "^6.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "@xyflow/react": "^12.3.5",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "graphql": "^16.9.0",
     "lucide-react": "^0.454.0",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
@@ -24,6 +26,7 @@
     "recharts": "^2.13.2",
     "sass": "^1.80.5",
     "shadcn-ui": "^0.9.2",
+    "subscriptions-transport-ws": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
