--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@monaco-editor/react": "^4.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@xyflow/react": "^12.3.5",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.454.0",
     "plotly.js": "^2.35.2",
     "react": "^18.3.1",
@@ -18,6 +20,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-monaco-editor": "^0.56.2",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
